# This software is (C) 2022 by Eric David Moyer
# licenced under GPL 3.0 or later. See README.md for more.
workspace(name = "IncarnationVR")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Note: 5376968f6948923e2411081fd9372e71a59d8e77 is the commit sha. Periodically update to the latest to "live at head"
http_archive(
    name = "com_google_googletest",
    sha256 = "199e68f9dff997b30d420bf23cd9a0d3f66bfee4460e2cd95084a2c45ee00f1a",
    strip_prefix = "googletest-5376968f6948923e2411081fd9372e71a59d8e77",
    urls = ["https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip"],
)

http_archive(
    name = "rules_foreign_cc",
    sha256 = "73aaf397ce8774c5ca7f5efa0f7ab7cb95860e975bffa8406a22c7079ebb1238",
    strip_prefix = "rules_foreign_cc-0dafcb29a8ce9c3b49a211ebba6c9c0f79eb93d6",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0dafcb29a8ce9c3b49a211ebba6c9c0f79eb93d6.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

#http_archive(
#    name = "com_valve_openvr",
#    build_file = "com_valve_openvr.BUILD",
#    strip_prefix = "openvr-1.16.8",
#    urls = ["https://github.com/ValveSoftware/openvr/archive/refs/tags/v1.16.8.zip"],
#)
